--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongoose": "^7.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
